--- a/mini-kernel/src/Userland/shell/Makefile
+++ b/mini-kernel/src/Userland/shell/Makefile
@@ -1,12 +1,12 @@
 include ../Makefile.inc
 
-MODULE=sampleCodeModule.bin
+MODULE=shell.bin
 SOURCES=$(wildcard *.c)
 
 all: $(MODULE)
 
 $(MODULE): $(SOURCES)
-	$(GCC) $(GCCFLAGS) -T sampleCodeModule.ld $(SOURCES) -o ../$(MODULE)
+	$(GCC) $(GCCFLAGS) -T shell.ld $(SOURCES) -o ../$(MODULE)
 
 clean:
 	rm -rf *.o
