--- a/mini-kernel/src/Userland/shell/Makefile
+++ b/mini-kernel/src/Userland/shell/Makefile
@@ -1,12 +1,15 @@
+include ../../Makefile.variables
 include ../Makefile.inc
 
-MODULE=shell.bin
-SOURCES=$(wildcard *.c)
+MODULE=shellCodeModule.bin
+SOURCES=shellModule.c $(wildcard commands/*.c)
+HEADERS=-I../../headers -I../clibs/include -I./
+LIBRARIES=-L../syscalls/lib -L../clibs/lib
 
 all: $(MODULE)
 
 $(MODULE): $(SOURCES)
-	$(GCC) $(GCCFLAGS) -T shell.ld $(SOURCES) -o ../$(MODULE)
+	$(GCC) $(GCCFLAGS) -T ./ld/shell.ld $(SOURCES) $(HEADERS) $(LIBRARIES) -lc -lsyscalls -o ../$(MODULE)
 
 clean:
 	rm -rf *.o
