--- a/mini-kernel/src/Userland/libcModule/Makefile
+++ b/mini-kernel/src/Userland/libcModule/Makefile
@@ -1,14 +1,13 @@
-include ../../Makefile.variables
 include ../Makefile.inc
 
-HEADERS=-I../../headers -I./include
-LIBRARIES=-L../syscalls/lib
+HEADERS = -I./include
+LIBRARIES = -L../syscallModule/lib
 
 all: clibs
 
 clibs:
 	$(GCC) $(GCCFLAGS) $(HEADERS) $(LIBRARIES) -lsyscalls -c libc.c
-	$(AR) rcs lib/clibs.a clibs.o
+	$(AR) rcs lib/libc.a libc.o
 
 clean:
 	rm -rf *.o liblib*.a
