--- a/mini-kernel/src/Userland/shellModule/Makefile
+++ b/mini-kernel/src/Userland/shellModule/Makefile
@@ -3,12 +3,12 @@ include ../Makefile.inc
 MODULE = shellCodeModule.bin
 SOURCES = $(wildcard *.c)
 HEADERS = -I./include -I../libcModule/include -I../syscallModule/include
-LIBRARIES = -L../syscallModule/lib -L../libcModule/lib
+LIBRARIES = -L../libcModule/lib -L../syscallModule/lib
 
 all: $(MODULE)
 
 $(MODULE): $(SOURCES)
-	$(GCC) $(GCCFLAGS) -T ./ld/shell.ld $(SOURCES) $(HEADERS) $(LIBRARIES) -lc -lsyscalls -o ../$(MODULE)
+	$(GCC) $(GCCFLAGS) -T ./ld/shell.ld $(SOURCES) $(HEADERS) $(LIBRARIES) -llibc -lsyscall -o ../$(MODULE)
 
 clean:
 	rm -rf *.o
