--- a/mini-kernel/src/Userland/syscallModule/Makefile
+++ b/mini-kernel/src/Userland/syscallModule/Makefile
@@ -3,13 +3,13 @@ include ../Makefile.inc
 all: syscall_int syscalls link
 
 syscalls:
-	$(GCC) $(GCCFLAGS) -I./include -c syscall.c
+	$(GCC) $(GCCFLAGS) -I ./include -c syscall.c
 
 syscall_int:
 	$(ASM) $(ASMFLAGS) syscall.asm -o syscall_asm.o
 
 link:
-	$(AR) rcs lib/syscall.a syscall_asm.o syscall.o
+	$(AR) rcs lib/libsyscall.a syscall_asm.o syscall.o
 
 clean:
 	rm -rf *.o lib/*.a
