makefiles hacen ./lib y code styling

--- a/mini-kernel/src/Userland/libcModule/Makefile
+++ b/mini-kernel/src/Userland/libcModule/Makefile
@@ -6,6 +6,7 @@ all: libc
 
 libc:
 	$(GCC) $(GCCFLAGS) $(HEADERS) $(LIBRARIES) -lsyscall -c *.c
+	mkdir -p ./lib
 	$(AR) rcs lib/liblibc.a *.o
 
 clean:
